Added a logo in the header + Added a new icon

--- a/InClass-Demo-S23-TempateFolder/deploy/index.html
+++ b/InClass-Demo-S23-TempateFolder/deploy/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-    <script src="js/scripts-min.js"></script>
+    <header>
+        <img src="img/global/ZojirushiLOGO.svg" alt="logo of Zojirushi">
+    
+        <nav>
+            <a href="#">Search</a>
+        </nav>
+    </header>
     
 </body>
 
