Update index.html pt. 3

--- a/Week2-HW/deploy/index.html
+++ b/Week2-HW/deploy/index.html
@@ -95,11 +95,11 @@
         <img src="img/icons/LocationIcon.svg" alt="Location Icon">
         <p>18B Neil Court, 
             Oceanside, New York 11572</p>
-        <img src="img/icons/PhoneNumber Icon.svg" alt="Smart Phone Icon">
+        <img src="img/icons/PhoneNumberIcon.svg" alt="Smart Phone Icon">
         <p>(516) 486-5700</p>
         
         <h4>South</h4>
-        <img src="img/icons/Location Icon.svg" alt="Location Icon">
+        <img src="img/icons/LocationIcon.svg" alt="Location Icon">
         <p>9039 Vantage Point Drive, 
             Dallas, TX 75243</p>
         <img src="img/icons/PhoneNumberIcon.svg" alt="Smart Phone Icon">
