css grid completed

--- a/Week2-HW/deploy/index.html
+++ b/Week2-HW/deploy/index.html
@@ -73,8 +73,8 @@
     </section>
 
     <section id="lineup-text">
-        <h1>Our Line Up</h1>
-        <ul>
+        <h1 class="lineup-text">Our Line Up</h1>
+        <ul class="lineup-text">
             <li>
                 <img src="img/miniheros/ricecooker7.jpg" alt="Neuro Fuzzy® Rice Cooker & Warmer NS-ZCC10/18"class="large-images">
                 <h3>Neuro Fuzzy® Rice Cooker & Warmer NS-ZCC10/18</h3>
