Hero Media Query FINISHED

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -32,18 +32,16 @@
     <section id="hero">
         <img src="img/heros/RiceCooker1.jpg" alt="MicomRice Cooker & WarmerNS-TSC10/18" class="large-images">
         
-        <section id="hero-left">
-            <aside>
+        <section >
+            <aside id="hero-left">
                 <div>
                     <h1>How to Use Our Product</h1>
                     <a href="#">Click Here to See Our Guide</a>
                     <a href="#">Learn More <i class="fa-solid fa-sort-up fa-rotate-90"></i></a>        
                 </div>
             </aside>
-        </section>
     
-        <section id="hero-right">
-            <aside>
+            <aside id="hero-right">
                 <div>
                     <h2>MicomRice Cooker & WarmerNS-TSC10/18</h2>
                     <a href="#">Check Out Our Latest Rice Cooker</a>
