--- a/deploy/index.html
+++ b/deploy/index.html
@@ -63,7 +63,7 @@
                    <div id="minihero-left">
                         <section>
                              <h1>Functions & Accessories</h1>
-                             <a href="#">Learn More</a>
+                             <a class= red-button href="#">Learn More</a>
                         </section>
               
                         <aside>
@@ -76,7 +76,7 @@
                    <div id="minihero-right">
                         <section>
                              <h1>Take a Closer Look</h1>
-                             <a href="#">Learn More</a>
+                             <a class= red-button href="#">Learn More</a>
                         </section>
               
                         <aside>
